--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/index.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <title>Home</title>
 </head>
@@ -50,8 +51,11 @@
     </section>
     <section class="about">
         <div class="row align-items-center main">
-            <img class="about__img" src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cG9ydHJhaXR8ZW58MHx8MHx8&w=1000&q=80" alt="">
-            <p class="about__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem autem eum unde minus id, quos fuga,
+            <img class="about__img"
+                src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cG9ydHJhaXR8ZW58MHx8MHx8&w=1000&q=80"
+                alt="">
+            <p class="about__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem autem eum
+                unde minus id, quos fuga,
                 iusto, ut sapiente at voluptate corrupti excepturi cupiditate. Ratione, optio? Ad molestiae perferendis
                 numquam explicabo dolores possimus tenetur nulla atque, debitis harum voluptas sequi impedit
                 exercitationem. Quibusdam in velit eum minima, adipisci nihil minus soluta consectetur temporibus
@@ -61,6 +65,68 @@
                 repellendus omnis numquam quaerat odit cum amet autem. Fugiat nesciunt amet nostrum repellendus quae
                 consectetur earum iure architecto voluptatum aliquam eligendi ducimus dolorum pariatur corrupti,
                 perspiciatis eius officia.</p>
+        </div>
+    </section>
+    <section id="footer">
+        <div class="footer-page">
+            <div class="container-footer">
+                <div class="cart-row-x">
+                    <div class="row">
+                        <div class="cart-footer">
+                            <h1>Moi</h1>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, alias.</p>
+                        </div>
+                        <div class="cart-footer">
+                            <h1>Zedrox</h1>
+                            <ul>
+                                <li>
+                                    <a href="#"> Accueil</a>
+                                </li>
+                                <li>
+                                    <a href="#"> A propos</a>
+                                </li>
+                                <li>
+                                    <a href="#"> Blog</a>
+                                </li>
+                                <li>
+                                    <a href="#"> Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="cart-footer">
+                            <h1>Services</h1>
+                            <ul>
+                                <li>
+                                    <a href="#"> Solutions</a>
+                                </li>
+                                <li>
+                                    <a href="#"> Publications</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="cart-footer">
+                            <h1>Suivez Nous</h1>
+                            <ul class="social-footer">
+                                <li>
+                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa-brands fa-discord"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
