--- a/index.html
+++ b/index.html
@@ -27,10 +27,19 @@
                             <a href="#"> Accueil</a>
                         </li>
                         <li>
+                            <a href="#"> Travail</a>
+                        </li>
+                        <li>
                             <a href="#"> Services</a>
                         </li>
                         <li>
-                            <a href="#"> A propos</a>
+                            <a href="#"> Blog</a>
+                        </li>
+                        <li>
+                            <a href="#about"> À propos</a>
+                        </li>
+                        <li>
+                            <a href="#"> Contact</a>
                         </li>
                     </ul>
                 </nav>
@@ -46,8 +55,7 @@
                     libero pariatur quod laudantium voluptatibus numquam.
                 </p>
                 <button class="btn__content">
-                    Savoir Plus
-                </button>
+                    <a href="#about"> Voir Plus</a></button>
             </div>
         </div>
     </section>
@@ -91,7 +99,7 @@
                                     <a href="#"> Accueil</a>
                                 </li>
                                 <li>
-                                    <a href="#"> A propos</a>
+                                    <a href="#"> À propos</a>
                                 </li>
                                 <li>
                                     <a href="#"> Blog</a>
