--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <header class="header js-header">
             <div class="container">
                 <div class="logo">
-                    <a href="#"> Zetro</a>
+                    <a href="#"> Zedrox</a>
                 </div>
                 <nav class="navb">
                     <ul>
