--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <a href="#"> Accueil</a>
                         </li>
                         <li>
-                            <a href="#"> Travail</a>
+                            <a href="#work"> Travail</a>
                         </li>
                         <li>
                             <a href="#"> Services</a>
@@ -50,9 +50,9 @@
             <div class="container-content">
                 <h2 class="content__title"> Salut !</h2>
                 <p class="content__description">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum possimus commodi vel molestias
-                    perspiciatis natus! Molestiae consequuntur quaerat ipsa sint officia possimus doloribus autem,
-                    libero pariatur quod laudantium voluptatibus numquam.
+                    Un développeur de logiciels Full Stack passionné 🚀 ayant une expérience dans la création
+                    d'applications Web avec JavaScript / Nodejs et quelques autres
+                    bibliothèques et frameworks sympas.
                 </p>
                 <button class="btn__content">
                     <a href="#about"> Voir Plus</a></button>
@@ -66,23 +66,54 @@
                 <img class="about__img"
                     src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cG9ydHJhaXR8ZW58MHx8MHx8&w=1000&q=80"
                     alt="">
-                <p class="about__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem autem eum
-                    unde minus id, quos fuga,
-                    iusto, ut sapiente at voluptate corrupti excepturi cupiditate. Ratione, optio? Ad molestiae
-                    perferendis
-                    numquam explicabo dolores possimus tenetur nulla atque, debitis harum voluptas sequi impedit
-                    exercitationem. Quibusdam in velit eum minima, adipisci nihil minus soluta consectetur temporibus
-                    pariatur cupiditate aliquid quis repellendus corrupti, ratione dolores enim officia fugit? Rem
-                    accusantium tempore harum distinctio, labore, ut ipsa quam sequi saepe dolore quasi iusto
-                    consectetur
-                    incidunt possimus, dicta maiores tenetur ex itaque earum? Nemo quidem, saepe praesentium ipsa
-                    repellendus omnis numquam quaerat odit cum amet autem. Fugiat nesciunt amet nostrum repellendus quae
-                    consectetur earum iure architecto voluptatum aliquam eligendi ducimus dolorum pariatur corrupti,
-                    perspiciatis eius officia.</p>
+                <p class="about__description">
+
+                    Je m'appelle Jordan, je suis programmeur Web, je suis aussi étudiant.
+                    Je crée des sites web lorsque j'ai du temps libre.
+                    Sinon je suis très sociable et très gentil.
+                    Donc si vous voulez discuté un jour avec moi, je serai content de parler de mes passions avec vous.
+                    Si vous avez des questions sur mes passions je serai très heureux de vous réppondre.
+
+                </p>
             </div>
         </div>
     </section>
+    <section id="work">
 
+        <div class="projet">
+            <div class="row center pad">
+                <div class="cart__p">
+                    <div class="pad">
+                        <div class="banner__p">
+                            <img src="https://cdn-icons-png.flaticon.com/512/1804/1804179.png" alt="">
+                        </div>
+                        <div class="title__projet">
+                            <h2>Web Design</h2>
+                        </div>
+                        <div class="desc__projet">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi aut praesentium
+                                reiciendis!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="cart__p">
+                    <div class="pad">
+                        <div class="banner__p">
+                            <img src="https://www.transparentpng.com/thumb/youtube-icon/uZCHPQ-youtube-logo-icon-social-media-icon-png-and-vector-for.png"
+                                alt="">
+                        </div>
+                        <div class="title__projet">
+                            <h2>Youtubeur</h2>
+                        </div>
+                        <div class="desc__projet">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi aut praesentium
+                                reiciendis!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="footer">
         <div class="footer-page">
             <div class="container-footer">
@@ -90,7 +121,7 @@
                     <div class="row__x">
                         <div class="cart-footer">
                             <h1>Moi</h1>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, alias.</p>
+                            <p></p>
                         </div>
                         <div class="cart-footer">
                             <h1>Zedrox</h1>
@@ -124,19 +155,16 @@
                             <h1>Suivez Nous</h1>
                             <ul class="social-footer">
                                 <li>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/juste.jordaann/"><i class="fa-brands fa-instagram"></i></a>
                                 </li>
                                 <li>
                                     <a href="#"><i class="fa-brands fa-discord"></i></a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                </li>
-                                <li>
                                     <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    <a href="https://github.com/zedrox888"><i class="fa-brands fa-github"></i></a>
                                 </li>
                             </ul>
                         </div>
